hphp/test/zend/bad/ext/mysqli/tests/mysqli_query_unicode.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
require_once('connect.inc');
require_once('table.inc');
if (!$res = mysqli_query($link, "SHOW CHARACTER SET LIKE 'utf8'"))
	die("skip UTF8 chatset seems not available");
mysqli_free_result($res);
mysqli_close($link);
?>